--- a/languages/restrict-checkout.pot
+++ b/languages/restrict-checkout.pot
@@ -12,7 +12,7 @@ msgstr ""
 "POT-Creation-Date: 2025-06-12T06:17:38+00:00\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "X-Generator: WP-CLI 2.12.0\n"
-"X-Domain: restrict-checkout\n"
+"X-Domain: restrict-checkout-access\n"
 
 #. Plugin Name of the plugin
 #: restrict-checkout-access.php
